--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font: 20px "Gill Sans", Verdana, sans-serif;
     line-height: 1.8;
-    color: #000000;
-    background-color: #dcdcdc;
+    color: #dc2424;
+    background-color: #17e265;
     padding-top: 0px !important;
   }
 
