--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 :root {
   --primary-color: #4d17e2; 
-  --accent-color:  #dc2424; 
   --light-color:   #f5f5f5;
-  --nav-bg:        #dcdcdc;
-  --nav-link-bg:   #a3a3a3;
 }
 
 body {
@@ -50,6 +47,23 @@ nav {
 }
 
 .nav-link {
+  border: 3px outset #a3a3a3;
+  border-radius: 20px;
+  padding: 10px 30px;
+  background-color: #a3a3a3;
+  color: #EEE7E8;
+  transition: 0.3s;
+}
+
+.nav-link:hover {
+  border: 3px outset #FFFFFF;
+  border-radius: 20px;
+  padding: 10px 30px;
+  background-color: #a3a3a3;
+  transition: 0.3s;
+}
+
+.nav-link {
   border: 2px solid var(--nav-link-bg);
   border-radius: 20px;
   padding: 10px 30px;
@@ -61,8 +75,7 @@ nav {
 .nav-link:hover {
   border-color: var(--light-color);
   transform: scale(1.05);
-  border-radius: 20px;
-  padding: 10px 30px;
+  
 }
 
 #btn {
