--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 :root {
-  --primary-color: #4d17e2; 
-  --light-color:   #f5f5f5;
+  --primary-color: #6638e6; 
 }
 
 body {
     font: 20px 'Gill Sans', Verdana, sans-serif;
     line-height: 1.8;
-    color: #0dfa58;
-    background: linear-gradient(360deg, var(--primary-color), var(--light-color));
+    color: #ffffff;
+    background: var(--primary-color);
     margin: 0;
     padding-top: 0px !important;
   }
