--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-:root {
-  --primary-color: #6638e6; 
-}
-
 body {
     font: 20px 'Gill Sans', Verdana, sans-serif;
     line-height: 1.8;
     color: #ffffff;
-    background: var(--primary-color);
+    background: #6638e6;
     margin: 0;
     padding-top: 0px !important;
   }
@@ -31,6 +27,10 @@ a {
   background: linear-gradient(135deg, #ec0d3d, #1c3d5a);
   padding: 15px 0;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+  margin-bottom: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .nav-container {
